--- a/src/Whodunit.app/packages.config
+++ b/src/Whodunit.app/packages.config
@@ -18,6 +18,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net452" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net452" />
@@ -30,7 +31,7 @@
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="semver" version="1.1.2" targetFramework="net452" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
-  <package id="UmbracoCms.Core" version="7.4.1" targetFramework="net452" />
+  <package id="UmbracoCms.Core" version="7.4.2" targetFramework="net452" />
   <package id="UrlRewritingNet" version="2.0.7" targetFramework="net452" />
   <package id="xmlrpcnet" version="2.5.0" targetFramework="net452" />
 </packages>
