--- a/src/package.json
+++ b/src/package.json
@@ -8,6 +8,7 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "0.4.5",
+    "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-umbraco-package": "^1.0.0"
   }
