--- a/src/package.json
+++ b/src/package.json
@@ -10,6 +10,7 @@
     "grunt": "0.4.5",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-umbraco-package": "^1.0.0"
+    "grunt-umbraco-package": "^1.0.0",
+    "grunt-wait": "^0.1.0"
   }
 }
