--- a/src/Whodunit.app/Whodunit.app.csproj
+++ b/src/Whodunit.app/Whodunit.app.csproj
@@ -285,18 +285,35 @@
     <Compile Include="Controllers\WhodunitController.cs" />
     <Compile Include="Events\ContentLogging.cs" />
     <Compile Include="Events\CreateTables.cs" />
+    <Compile Include="Helpers\XmlHelper.cs" />
     <Compile Include="HistoryHelper.cs" />
+    <Compile Include="Install\Package_Actions\TransformXmlFile.cs" />
     <Compile Include="Models\HistoryItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="App_Plugins\whodunit\package.manifest" />
+    <None Include="App_Plugins\whodunit\Transforms\dashboard.config.install.xdt" />
+    <None Include="App_Plugins\whodunit\Transforms\dashboard.config.uninstall.xdt" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Plugins\whodunit\control.html" />
     <Content Include="App_Plugins\whodunit\whodunit.controller.js" />
+    <Content Include="Resources\TransformDashboard.txt" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
