Added section to dashboard config in test website.

--- a/src/Whodunit.test/Config/Dashboard.config
+++ b/src/Whodunit.test/Config/Dashboard.config
@@ -97,4 +97,13 @@
     </tab>
   </section>
 
+  <section alias="WhodunitSection">
+    <areas>
+      <area>content</area>
+    </areas>
+    <tab caption="Changes Export">
+      <control>/App_Plugins/whodunit/control.html</control>
+    </tab>
+  </section>
+
 </dashBoard>
