--- a/src/Whodunit.app/packages.config
+++ b/src/Whodunit.app/packages.config
@@ -3,6 +3,7 @@
   <package id="AutoMapper" version="3.0.0" targetFramework="net452" />
   <package id="ClientDependency" version="1.8.4" targetFramework="net452" />
   <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net452" />
+  <package id="CsvHelper" version="2.13.5.0" targetFramework="net452" />
   <package id="Examine" version="0.1.68.0" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net452" />
   <package id="ImageProcessor" version="2.3.3.0" targetFramework="net452" />
@@ -32,7 +33,7 @@
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="semver" version="1.1.2" targetFramework="net452" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
-  <package id="UmbracoCms.Core" version="7.4.2" targetFramework="net452" />
+  <package id="UmbracoCms.Core" version="7.4.1" targetFramework="net452" />
   <package id="UrlRewritingNet" version="2.0.7" targetFramework="net452" />
   <package id="xmlrpcnet" version="2.5.0" targetFramework="net452" />
 </packages>
