--- a/src/Whodunit.test/Config/Dashboard.config
+++ b/src/Whodunit.test/Config/Dashboard.config
@@ -101,7 +101,7 @@
     <areas>
       <area>content</area>
     </areas>
-    <tab caption="Changes Export">
+    <tab caption="History Report">
       <control>/App_Plugins/whodunit/control.html</control>
     </tab>
   </section>
